# fumen-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  todo  vite.config.js
illust/: clear-line-down.ai  clear-line-down2.ai  clear-line-up.ai  clear-line.ai  mouse_move.ai  mouse_right.ai  mouse_wheel.ai  mouse_wheel_click.ai
src/: App.svelte  app.html  comment.rs  cursor.svelte  enums.rs  field.rs  fumen.rs  gameConfig.ts  global.d.ts  history.ts  imageProcessor.ts  lib.rs  mino.rs  mino_flags.rs  page.rs  store.ts  teachableMachine.ts  util.rs
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/assets/model/: metadata.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  model.rs
src-tauri/windows/: hooks.nsi
src/app/: gameConfig.ts  keymap.ts  panelPresets.ts  snapShotData.ts
src/app/stores/: config.ts  data.ts  history.ts  internalUpdateStore.ts  misc.ts  window.ts
src/components/: bottomBar.svelte  menuBar.svelte  notificationBar.svelte  panel.svelte  splashScreen.svelte
src/components/bottoms/: history.svelte  share.svelte
src/components/buildinPanels/: tetrisHold.svelte  tetrisNext.svelte  tetrisSnapshot.svelte
src/components/field/: fumenImportPanel.svelte  gifExportPanel.svelte  imageImportPanel.svelte  tetrisBoard.svelte  tetrisEdit.svelte  tetrisPlay.svelte
src/components/fields/: branch.svelte  fumenImportPanel.svelte  gifExportPanel.svelte  imageImportPanel.svelte  preferences.svelte  tetrisBoard.svelte  tetrisEdit.svelte  tetrisPlay.svelte  tetrominoSelect.svelte
src/components/notification/: history.svelte  share.svelte
src/components/panels/: tetrisBlock.svelte  tetrisBot.svelte  tetrisHold.svelte  tetrisNext.svelte  tetrisSnapshot.svelte  view.svelte
src/core/commands/: builtinCommands.ts  newCommands.ts
src/core/interfaces/: IBotSuggestions.ts  ICopyPaste.ts  IEventListener.ts  ISerializable.ts  IUndoRedo.ts  WindowBase.ts
src/core/nodes/: db.ts
src/core/shortcuts/: builtinShortcuts.ts
src/core/utils/: imageRecognition.ts
src/register/commands/: builtinCommands.ts  exampleCommand.ts
src/register/shortcuts/: builtinShortcuts.ts
src/registry/commands/: builtinCommands.ts
src/registry/shortcuts/: builtinShortcuts.ts
src/routes/: +layout.ts  +page.svelte
src/routes/debug/: +page.svelte
src/routes/visualizer/: +page.svelte
src/services/: online.ts
src/translations/: translations.ts
src/utils/: commands.ts  fumenImage.ts  menus.ts  reverseEventManager.ts  shortcuts.ts
static/: ppt.json  tetrio.json
uml/: canvas.pu  db copy.plantuml  db.plantuml  even.md  event.md  main.plantuml  network.pu  node.pu
(+63 files in other folders)
