[package]
name = "fumen"
version = "0.1.2"
description = "A Tauri App"
authors = ["CSDotNET"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fumen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.2.5",features = ["protocol-asset", "devtools", "image-png"] }
tauri-plugin-opener = "2.2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-fs ="2"
libloading = "0.8.6"
reqwest = "0.12.12"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
neuroflow = "0.2.0"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
sys-locale = "0.3.2"
showfile  = "0.1.1"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = [ "shellscalingapi" ] }

[features]
unstable = []
