[package]
name = "fumen"
version = "0.1.2"
description = "A Tauri App"
authors = ["CSDotNET"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fumen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1",features = ["protocol-asset", "devtools", "image-png"] }
tauri-plugin-opener = "2.2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-fs ="2.3.0"
libloading = "0.8.7"
reqwest = "0.12.15"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-shell = "2.2.2"
tauri-plugin-process = "2.2.2"
neuroflow = "0.2.0"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
sys-locale = "0.3.2"
showfile  = "0.1.1"
candle-core="0.9.1"
candle-nn="0.9.1"
anyhow="1.0.98"
rand="0.9.1"
scap = "0.0.8"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = [ "shellscalingapi" ] }

[features]
unstable = []
